Fixed styling issues of the code blocks on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -955,6 +955,9 @@ pre {
 
 pre[class*="language-"] {
 	max-height: none;
+	overflow: auto;
+	word-wrap: normal;
+	white-space: pre;
 }
 
 p code, li code {
